infrastructure/portainer/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: staging # Deployed using the staging traefik instance
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.mardi3.schubotz.org`)
      kind: Rule
      services:
        - name: portainer
          namespace: portainer
          port: 9000
  tls:
    secretName: portainer-tls
